--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Photo and video display client built in React",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "start": "webpack-dev-server --open",
+	"build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,6 +29,9 @@
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "webpack": "^3.10.0"
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
