--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
 	presets: ["env", "es2015", "react"],
-  	plugins: ["transform-class-properties"]
+  	plugins: ["transform-class-properties","transform-object-rest-spread"]
 }
