--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "redux": "^3.7.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
+  },
+  "dependencies": {
+    "react-grid-gallery": "^0.4.8"
   }
 }
